exports[`VerticalTabs [common] example testing should match snapshot for 1-title-as-prop 1`] = `
<div>
  <VerticalTabs>
    <VerticalTabs.Tab
      Title="One">
      One content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab
      Title="Two">
      Two content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab
      Title="Three">
      Three content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab
      Title="Five">
      Four content
    </VerticalTabs.Tab>
  </VerticalTabs>
</div>
`;

exports[`VerticalTabs [common] example testing should match snapshot for 2-title-as-child 1`] = `
<div>
  <VerticalTabs>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        One
      </VerticalTabs.Title>
      One content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        Two
      </VerticalTabs.Title>
      Two content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        Three
      </VerticalTabs.Title>
      Three content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        Four
      </VerticalTabs.Title>
      Four content
    </VerticalTabs.Tab>
  </VerticalTabs>
</div>
`;

exports[`VerticalTabs [common] example testing should match snapshot for 3-complex-title-as-child 1`] = `
<div>
  <VerticalTabs>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        <h2
          style={
            Object {
              "margin": 0,
            }
          }>
          One
        </h2>
        <SuccessIcon />
        <span
          style={
            Object {
              "color": "#333",
              "fontWeight": "normal",
              "marginLeft": "5px",
            }
          }>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </span>
      </VerticalTabs.Title>
      One content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        <h2
          style={
            Object {
              "margin": 0,
            }
          }>
          Two
        </h2>
        <WarningIcon />
        <span
          style={
            Object {
              "color": "#333",
              "fontWeight": "normal",
              "marginLeft": "5px",
            }
          }>
          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </span>
      </VerticalTabs.Title>
      Two content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        <span>
          <h2
            style={
              Object {
                "margin": 0,
              }
            }>
            Performance
          </h2>
          <svg
            height={50}
            width={200}>
            <Lines
              colorOffset={0}
              data={
                Array [
                  Object {
                    "x": 1,
                    "y": 1,
                  },
                  Object {
                    "x": 2,
                    "y": 0,
                  },
                  Object {
                    "x": 3,
                    "y": 3,
                  },
                  Object {
                    "x": 4,
                    "y": 2,
                  },
                  Object {
                    "x": 5,
                    "y": 1,
                  },
                  Object {
                    "x": 6,
                    "y": 3,
                  },
                ]
              }
              isStacked={false}
              palette={
                Array [
                  "color-chart-0",
                  "color-chart-1",
                  "color-chart-2",
                  "color-chart-3",
                  "color-chart-4",
                  "color-chart-5",
                ]
              }
              xField="x"
              xScale={[Function]}
              yFields={
                Array [
                  "y",
                ]
              }
              yScale={[Function]} />
          </svg>
        </span>
      </VerticalTabs.Title>
      Three content
    </VerticalTabs.Tab>
    <VerticalTabs.Tab>
      <VerticalTabs.Title>
        Four
      </VerticalTabs.Title>
      Four content
    </VerticalTabs.Tab>
  </VerticalTabs>
</div>
`;
